--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -27,7 +27,7 @@ body {
   width: 100%;
   padding: 15px 10px;
   text-align: right;
-  border-color: antiquewhite;
+  border-color: #faebd7;
   background-color:#000a29;
   color: #ffffff;
   font-size: 35px;
@@ -42,7 +42,7 @@ body {
   margin-top: 40px;
 }
 .buttons input[type="button"] {
-  font-size: 25px;
+  font-size: 20px;
   padding: 17px;
   border: none;
   background-color:#000a29;
@@ -53,7 +53,7 @@ body {
 .buttons input[type="button"]:hover {
   box-shadow: 0 8px 25px #ced1d6;
 }
-input[type="button"]#equal {
+input[type="button"]#igual {
   grid-row: span 2;
   background-color: #080242;
 }
