--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -1,97 +1,91 @@
-* {
+  /*  El asterisco indica que estos cambios se aplican a todos los elementos del html, resetea */
+
+* {   
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: Arial;
 }
+
+h1 {
+  place-content: center;
+  text-align: center;
+  color: white;
+  margin: 10px;
+}
+
+p {
+  place-content: center;
+  text-align: center;
+  color: white;
+}
+
 body {
-  height: 100vh;
+  height: 50vh;
   background-color: #000a29;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png"); /* Fondo azul estrellado */
 }
-.calculator {
-  width: 400px;
+.calculator {  /* cuerpo de la calculadora */
+
+  width: 400px  ;
+  margin: 30px auto;
+  border: 1px solid #000;
+  padding: 10px;
   background-color: #5C4033;
   background-image: url("https://www.transparenttextures.com/patterns/purty-wood.png");  /* Textura de madera */
-  padding: 50px 30px;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
+ padding: 50px 30px;
   border-radius: 20px;
 }
-.display {
+.display {   /* pantalla */
   width: 100%;
 }
-.display input {
-  width: 100%;
+.display input {   /* entradas pantalla */
+  width: 100%; 
   padding: 15px 10px;
   text-align: right;
   border-color: #faebd7;
-  background-color:#000a29;
-  color: #ffffff;
-  font-size: 35px;
+  border-width: 7px;    /* borde pantalla */
+  background-color: #000000;
+  background-image: url("https://www.transparenttextures.com/patterns/black-felt.png");  /* fondo pantalla */
+  color: #ffffff;     /* color texto en pantalla */
+  font-size: 50px;
 }
 .display input::placeholder {
   color: #ffffff;
 }
-.buttons {
+.buttons {            /* estructura botones */
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
   margin-top: 40px;
 }
-.buttons input[type="button"] {
+.buttons input[type="button"] {   /* cada botón */
   font-size: 20px;
   padding: 17px;
   border: none;
   background-color:#000a29;
-  color: #ffffff;
-  cursor: pointer;
+  color: #ffffff;   /* sombra blanca */
+  cursor: pointer;   /* muestra cursor sobre botones */
   border-radius: 20px;
 }
 .buttons input[type="button"]:hover {
   box-shadow: 0 8px 25px #ced1d6;
 }
-input[type="button"]#igual {
+input[type="button"]#igual {  /* botón igual */
   grid-row: span 2;
   background-color: #080242;
 }
-input[type="button"][value="0"] {
+input[type="button"][value="0"] {   /* botón 0 más grande */
   grid-column: span 2;
 }
 
-h1 {
-  display: grid;
-  place-content: center;
-  color: white;
-  padding: 20px;
-}
-
-h4, p {
-  display: grid;
-  place-content: center;
-  color: white;
-}
-
-/* Estilos para moviles */
-
-@media (max-width:768px) {
-  .galeria {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-/* Estilos para tablets */
-@media (min-width:768px) {
-  .galeria {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* Estilos para Computadoras y Notebooks */
-@media (min-width:1200px) {
-  .galeria {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
+hr { 
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 2px;
+  color:antiquewhite;
+} 
